--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ input:hover{
     color: black;
     text-align: center;
     font-weight: bold;
-    font-size: 100px;
+    font-size: 80px;
+    height: 100px;
 }
 
 .to-center-input {
@@ -76,7 +77,8 @@ input:hover{
     margin-right: 10%;
     height: 50px;
     text-align: center;
-    font-size: 100px;
+    font-size: 80px;
+    height: 100px;
 }
 
 button {
