code decoder modify5

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ input:hover{
     font-weight: bold;
     font-size: 80px;
     height: 100px;
+    margin-top: 40px;
 }
 
 .to-center-input {
@@ -75,6 +76,7 @@ input:hover{
     width: 80%;
     margin-left: 10%;
     margin-right: 10%;
+    margin-top: 40px;
     height: 50px;
     text-align: center;
     font-size: 80px;
