code decoder modify5

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ input:hover{
     font-weight: bold;
     font-size: 80px;
     height: 100px;
-    margin-top: 40px;
+    margin-bottom: 50px;
 }
 
 .to-center-input {
