code decoder modify7

--- a/style.css
+++ b/style.css
@@ -46,11 +46,14 @@ h3{
 }
 
 @keyframes Pritham {
-    from{
+    0%{
         opacity: 0;
     }
-    to
+    50%
     {
+        opacity: 0.7;
+    }
+    100%{
         opacity: 1;
     }
 }
@@ -101,9 +104,11 @@ button:hover{
 }
 
 footer{
-    background-color: black;
+    background-color:aqua;
     text-align: center;
-    color: white;
+    color: black;
+    border-radius: 10px;
     font-weight: bold;
     font-size: 60px;
+    animation: Pritham 3s linear 0s infinite alternate-reverse;
 }
